cmake_minimum_required(VERSION 3.23)
project(estructurascontrol C)

set(CMAKE_C_STANDARD 23)

add_executable(ej1 ejercicio1.c)
add_executable(ej2 ejercicio2.c)
add_executable(ej3 ejercicio3.c)
add_executable(ej4 ejercicio4.c)
add_executable(ej5 ejercicio5.c)
add_executable(ej6 ejercicio6.c)
add_executable(ej7 ejercicio7.c)
